syntax = "proto3";

option go_package = ".;protocol";

package ksandbox.v1alpha1;

// The agent runs in the pod, and serves this service to allow for complicated actions inside a container.
service Agent {
  // Execute the specified shell command
  rpc ExecuteCommand(ExecuteCommandRequest) returns (ExecuteCommandResponse);

  // TODO: Read / write filesystem
}

// Requests execution of a shell command
message ExecuteCommandRequest {
  // The command to execute
  repeated string command = 1;

  // The working directory for the command
  string working_dir = 2;

  // The environment variables to set for the command
  repeated EnvironmentVariable env = 3;
}

message EnvironmentVariable {
  string name = 1;
  string value = 2;
}

// Reports results of executing a shell command
message ExecuteCommandResponse {
    int32 exit_code = 1;

    bytes stdout = 2;
    bytes stderr = 3;
}
